[package]
name = "errno"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["error", "macro", "number"]
description = "macros for creating number based errors"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-errno.git"
homepage = "https://github.com/nathanfaucett/rs-errno"
